<resources>
    <string name="app_name">Carrefour</string>
    <string name="intro_one_title">O aplicativo Carrefour ajuda você organizar\n suas contas de onde estiver</string>
    <string name="intro_one_subtitle">Simples, fácil de usar e grátis</string>
    <string name="intro_two_title">Controle todos seus gastos com \ntoda tecnologia disponível</string>
    <string name="intro_two_subtitle">Chega de calculadora e anotações em caderno</string>
    <string name="intro_three_title">Seu controle financeiro em suas mãos!</string>
    <string name="intro_three_subtitle">Carrefour sempre fazendo o melhor por você</string>
    <string name="register">Cadastre-se</string>
    <string name="login">Login</string>
    <string name="have_register">Já tenho conta</string>
    <string name="intro_register_title">Crie sua conta grátis</string>
    <string name="intro_register_subtitle">Já são mais de meio milhão de usuários Carrefour \nusando o aplicativo, comece já!</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="title_sign_up">Crie sua conta grátis</string>
    <string name="title_sign_in">Acesse sua conta</string>
    <string name="enter">Entrar</string>
    <string name="btn_register">Cadastrar</string>
    <string name="text_fill_name">Preencha seu nome</string>
    <string name="text_fill_email">Preencha seu e-mail</string>
    <string name="text_fill_password">Preencha sua senha</string>
    <string name="text_strong_password">Digite uma senha mais forte</string>
    <string name="text_valid_email">Digite um e-mail válido</string>
    <string name="text_register_email">E-mail já cadastrado!</string>
    <string name="text_wrong_register_user">Erro ao cadastrar usuário: </string>
    <string name="text_register_sucess">Sucesso ao cadastrar usuário</string>
    <string name="text_not_register_user">Usuário não está cadastrado</string>
    <string name="text_not_equal_email_and_password">E-mail e senha não corresponde a um usuário cadastrado</string>
    <string name="text_wrong_login_user">Erro ao logar usuário</string>
    <string name="menu">Menu</string>
    <string name="expense">Despesa</string>
    <string name="revenue">Receita</string>
    <string name="benefit">benefício</string>
    <string name="my_carrefour">MeuCarrefour</string>
    <string name="hello_user">Olá, .....</string>
    <string name="figure_real">R$ 00,00</string>
    <string name="balance_total">Saldo geral</string>
    <string name="date_exemple">Data Ex.: 18/05/2023</string>
    <string name="category">Categoria</string>
    <string name="description">Descrição</string>
    <string name="text_not_completed_value">Valor não preenchido</string>
    <string name="text_not_completed_category">Categoria não preenchida</string>
    <string name="text_not_completed_date">Data não preenchida</string>
    <string name="text_not_completed_description">Descrição não preenchida</string>
    <string name="value">valor</string>
    <string name="exit">Sair</string>
    <string name="delete_movement_account">Excluir Movimentaçao da Conta</string>
    <string name="are_you_sure_delete_movement_account">Você tem certeza que deseja realmente exlcuir essa movimentação de sua conta?</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="canceling">Cancelado</string>
</resources>