<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:background="@drawable/box_home">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="#"
                    android:textColor="@color/yellowt"
                    android:textSize="28sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/benefit"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_carrefour"
                    android:textColor="@color/yellowt"
                    android:textSize="28sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_hello_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/hello_user" />

            <TextView
                android:id="@+id/text_balance_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:text="@string/figure_real" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/balance_total" />


            <TextView
                android:id="@+id/btn_schedule_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:background="@drawable/box_line_white"
                android:drawablePadding="10dp"
                android:text="Durante este mês"
                android:drawableLeft="@drawable/baseline_calendar_today_24"
                android:textColor="@color/white"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_month"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:orientation="vertical">

                    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/yellowt"
                        android:layout_marginTop="5dp"
                        app:mcv_showOtherDates="all"
                        app:mcv_tileSize="50dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_movimentation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"/>
                </LinearLayout>

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    app:fillColor="#FFFFFFFF"
                    app:pageColor="#00000000"
                    app:radius="6dp"
                    app:slideInterval="3000"
                    app:strokeColor="#FF777777"
                    app:strokeWidth="1dp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>
