<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeActivity">

        <include layout="@layout/content_home"/>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            fab:menu_fab_size="normal"
            fab:menu_showShadow="true"
            fab:menu_shadowColor="#66000000"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="3dp"
            fab:menu_colorNormal="@color/red_carrefour"
            fab:menu_colorPressed="@color/red_light"
            fab:menu_colorRipple="#99FFFFFF"
            fab:menu_animationDelayPerItem="50"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_buttonSpacing="0dp"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_paddingTop="4dp"
            fab:menu_labels_paddingRight="8dp"
            fab:menu_labels_paddingBottom="4dp"
            fab:menu_labels_paddingLeft="8dp"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_textColor="@color/white"
            fab:menu_labels_textSize="14sp"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_colorNormal="#333333"
            fab:menu_labels_colorPressed="#444444"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_position="left"
            fab:menu_openDirection="up"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_fab_label="@string/menu">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fab_add"
                app:fab_colorNormal="@color/red_carrefour"
                app:fab_colorPressed="@color/red_light"
                fab:fab_size="mini"
                fab:fab_label="@string/expense" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/blue_carrefour"
                app:fab_colorPressed="@color/blue_light"
                android:src="@drawable/fab_add"
                fab:fab_size="mini"
                fab:fab_label="@string/revenue" />

        </com.github.clans.fab.FloatingActionMenu>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
