<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ExpenseActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center|end"
                android:padding="16dp"
                android:background="@color/red_carrefour"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_value_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="R$ 00,00"
                    android:textColorHint="@color/white"
                    android:inputType="numberDecimal"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_date_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_carrefour"
                    android:layout_marginTop="26dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/date_exemple"
                    android:textColor="@color/white"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_category_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/box_carrefour"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/category" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/box_carrefour"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_salve_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="36dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/red_carrefour"
            android:src="@drawable/baseline_check_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
